# anari-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hdri.cpp  hdri.h  scenes.h  util.h  viewer.cpp
apps/AnariVTKVolume/: CMakeLists.txt  README.md  main.cpp
asg/: CMakeLists.txt  asg.cpp  asg.h  asg.hpp  linalg.hpp  test.c
asg/detail/: asg.inl
asg/docs/: Doxyfile
generic_device/: CMakeLists.txt  ao.cpp  ao.hpp  array.cpp  array.hpp  backend.cpp  backend.hpp  camera.cpp  camera.hpp  cylindergeom.cpp  cylindergeom.hpp  device.cpp  device.hpp  frame.cpp  frame.hpp  geometry.cpp  geometry.hpp  group.cpp  group.hpp  instance.cpp  instance.hpp  light.cpp  light.hpp  logging.cpp  logging.hpp  material.cpp  material.hpp  matte.cpp  matte.hpp  object.hpp  pathtracer.cpp  pathtracer.hpp  perspectivecamera.cpp  perspectivecamera.hpp  pointlight.cpp  pointlight.hpp  quadlight.cpp  quadlight.hpp  renderer.cpp  renderer.hpp  (+16 more)
scenes/: grabber.h  island.h
stub_device/: CMakeLists.txt  device.cpp  device.hpp
visionaray_device/: CMakeLists.txt  array.cpp  array.hpp  backend.cpp  backend.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  frame.cpp  frame.hpp  logging.cpp  logging.hpp  object.hpp  pathtracer.cpp  pathtracer.hpp  perspectivecamera.cpp  perspectivecamera.hpp  renderer.cpp  renderer.hpp  resource.cpp  resource.hpp  spatialfield.cpp  spatialfield.hpp  structuredregular.cpp  structuredregular.hpp  volume.cpp  volume.hpp
